added some ornaments to the webpage

--- a/src/index.html
+++ b/src/index.html
@@ -29,17 +29,119 @@
           font-size: 80px;
           margin-bottom: 10px;
         }
+        h1:hover {
+          color: #fc9d03;
+          font-family: "Nunito Sans", "Helvetica Neue", sans-serif;
+          font-weight: 900;
+          font-size: 80px;
+          margin-bottom: 10px;
+        }
         p {
           color: #cc7a00;
           font-family: "Nunito Sans", "Helvetica Neue", sans-serif;
           font-size:22px;
           margin: 0;
         }
+        p:hover {
+          color: #fc9d03;
+          font-family: "Nunito Sans", "Helvetica Neue", sans-serif;
+          font-size:22px;
+          margin: 0;
+        }
+        .subTitle {
+          padding-top: 40px;
+        }
+        .ornament {
+          position: absolute;
+          bottom: 20vh;
+          left: 40vw;
+          background-color: #95c160;
+          border-radius: 100px;
+          width: 200px;
+          height: 200px;
+        }
+        .ornament:hover {
+          position: absolute;
+          bottom: 20vh;
+          left: 40vw;
+          background-color: #0ef400;
+          border-radius: 100px;
+          width: 200px;
+          height: 200px;
+        }
+        .top {
+          position: absolute;
+          bottom: 21.5vh;
+          left: 44.5vw;
+          width: 40px;
+          height: 200px;
+          border-radius: 5px;
+          background-color: #e8dcdc;
+          transform: rotate(-45deg);
+        }
+        .ring {
+          position: absolute;
+          left: 40.5vw;
+          bottom: 41vh;
+          width: 14px;
+          height: 14px;
+          border-radius: 14px;
+          border: 3px solid #e8dcdc;
+        }
+        .ornament2 {
+          position: absolute;
+          bottom: 20vh;
+          left: 50vw;
+          background-color: #c16060;
+          border-radius: 100px;
+          width: 200px;
+          height: 200px;
+        }
+        .ornament2:hover {
+          position: absolute;
+          bottom: 20vh;
+          left: 50vw;
+          background-color: #f40000;
+          border-radius: 100px;
+          width: 200px;
+          height: 200px;
+        }
+        .top2 {
+          position: absolute;
+          bottom: 22vh;
+          left: 56vw;
+          width: 40px;
+          height: 200px;
+          border-radius: 5px;
+          background-color: #e8dcdc;
+          transform: rotate(45deg);
+        }
+        .ring2 {
+          position: absolute;
+          left: 61.5vw;
+          bottom: 41.5vh;
+          width: 14px;
+          height: 14px;
+          border-radius: 14px;
+          border: 3px solid #e8dcdc;
+        }
     </style>
     <body onload="scrollLetter(0)">
-      </div class="card">
-        <p>Welcome to Noah Otsuka's Website</p> 
+      </div>
+        <p class="subTitle">Welcome to Noah Otsuka's Website</p> 
         <h1 id="title"></h1> 
+      </div>
+      <div class="top">
+      </div>
+      <div class="ring">
+      </div>
+      <div class="ornament">
+      </div>
+      <div class="top2">
+      </div>
+      <div class="ring2">
+      </div>
+      <div class="ornament2">
       </div>
     </body>
 </html>
