added secure connectio and a fewe UI updates

--- a/src/index.html
+++ b/src/index.html
@@ -53,8 +53,8 @@
         }
         .ornament {
           position: absolute;
-          bottom: 20vh;
-          left: 40vw;
+          bottom: 165px;
+          left: 555px;
           background-color: #95c160;
           border-radius: 100px;
           width: 200px;
@@ -62,8 +62,8 @@
         }
         .ornament:hover {
           position: absolute;
-          bottom: 20vh;
-          left: 40vw;
+          bottom: 165px;
+          left: 555px;
           background-color: #0ef400;
           border-radius: 100px;
           width: 200px;
@@ -71,8 +71,8 @@
         }
         .top {
           position: absolute;
-          bottom: 21.5vh;
-          left: 44.5vw;
+          bottom: 175px;
+          left: 625px;
           width: 40px;
           height: 200px;
           border-radius: 5px;
@@ -81,8 +81,8 @@
         }
         .ring {
           position: absolute;
-          left: 40.5vw;
-          bottom: 41vh;
+          left: 560px;
+          bottom: 340px;
           width: 14px;
           height: 14px;
           border-radius: 14px;
@@ -90,8 +90,8 @@
         }
         .ornament2 {
           position: absolute;
-          bottom: 20vh;
-          left: 50vw;
+          bottom: 165px;
+          right: 555px;
           background-color: #c16060;
           border-radius: 100px;
           width: 200px;
@@ -99,8 +99,8 @@
         }
         .ornament2:hover {
           position: absolute;
-          bottom: 20vh;
-          left: 50vw;
+          bottom: 165px;
+          right: 555px;
           background-color: #f40000;
           border-radius: 100px;
           width: 200px;
@@ -108,8 +108,8 @@
         }
         .top2 {
           position: absolute;
-          bottom: 22vh;
-          left: 56vw;
+          bottom: 175px;
+          right: 625px;
           width: 40px;
           height: 200px;
           border-radius: 5px;
@@ -118,8 +118,8 @@
         }
         .ring2 {
           position: absolute;
-          left: 61.5vw;
-          bottom: 41.5vh;
+          right: 560px;
+          bottom: 340px;
           width: 14px;
           height: 14px;
           border-radius: 14px;
